15 June 2007: Wouter
	- if a query asks to be notified of the same serviced query result
	  multiple times, this will succeed. Only one callback will happen;
	  multiple outbound-list entries result (but the double cleanup of it
	  will not matter).
	- when iterator moves on due to CNAME or referral, it will remove
	  the subqueries (for other targets). These are put on the slumber
	  list.
	- state module wait subq is OK with no new subqs, an old one may have
	  stopped, with an error, and it is still waiting for other ones.
	- if a query loops, halt entire query (easy way to clean up properly).

14 June 2007: Wouter
	- num query targets was > 0 , not >= 0 compared, so that fetch
	  policy of 0 did nothing.

13 June 2007: Wouter
	- debug option: configure --enable-static-exe for compile where
	  ldns and libevent are linked statically. Default is off.
	- make install and make uninstall. Works with static-exe and without.
	  installation of unbound binary and manual pages.
	- alignement problem fix on solaris 64.
	- fixup address in case of TCP error.

12 June 2007: Wouter
	- num target queries was set to 0 at a bad time. Default it to 0 and
	  increase as target queries are done.
	- synthesize CNAME and DNAME responses from the cache.
	- Updated doxygen config for doxygen 1.5.
	- aclocal newer version.
	- doxygen 1.5 fixes for comments (for the strict check on docs).

11 June 2007: Wouter
	- replies on TCP queries have the address field set in replyinfo,
	  for serviced queries, because the initiator does not know that
	  a TCP fallback has occured.
	- omit DNSSEC types from nonDO replies, except if qtype is ANY or
	  if qtype directly queries for the type (and then only show that
	  'unknown type' in the answer section).
	- fixed message parsing where rrsigs on their own would be put
	  in the signature list over the rrsig type.

7 June 2007: Wouter
	- fixup error in double linked list insertion for subqueries and